simplification tuto BNPE

--- a/scripts/01_intro.html
+++ b/scripts/01_intro.html
@@ -334,8 +334,8 @@ code > span.er { color: #a61717; background-color: #e3d2d2; }
 <p>Un <em>package</em> R regroupe un ensemble de fonctions. Celui-ci est nommé <code>{tod}</code> pour les initiales de “télécharger open data”. A terme, il fournira un jeu assez fourni de fonctionalités pour importer des jeux de données ouvertes et leur appliquer des mises en formes minimales.</p>
 <p>Dans un premier temps, il permet que de manipuler les données :</p>
 <ul>
-<li>du <a href="https://www.geoportail-urbanisme.gouv.fr/">Géoportail de l’Urbanisme</a>. Celui-ci offre des <a href="https://www.geoportail-urbanisme.gouv.fr/services/">services de téléchargement, de consultation ainsi que des API</a>.</li>
-<li>de la <a href="http://hydro.eaufrance.fr/">base HYDRO</a>.</li>
+<li>du <a href="https://rpubs.com/kamoke/723482">Géoportail de l’Urbanisme</a>.</li>
+<li>de la <a href="https://rpubs.com/kamoke/723965">banque HYDRO</a>.</li>
 </ul>
 <p>Les fonctions sont nommées de manière relativement explicite. Par exemple toutes celles préfixées par <code>ign_urba</code>, comme <code>ign_urba_lire_shapes()</code> concernent la chaîne de traitements dédiée au portail de l’urbanisme. La première partie du préfixe indique l’organisme fournisseur de la donnée, la seconde le nom de la base.</p>
 </div>
