--- a/scripts/01_intro.html
+++ b/scripts/01_intro.html
@@ -12,7 +12,7 @@
 
 <meta name="author" content="Pascal Irz" />
 
-<meta name="date" content="2021-02-12" />
+<meta name="date" content="2021-04-21" />
 
 <title>Package {tod} - Introduction</title>
 
@@ -40,7 +40,14 @@ document.addEventListener('DOMContentLoaded', function(e) {
     </style>
 
 
-<style type="text/css">code{white-space: pre;}</style>
+<style type="text/css">
+  code {
+    white-space: pre;
+  }
+  .sourceCode {
+    overflow: visible;
+  }
+</style>
 <style type="text/css" data-origin="pandoc">
 pre > code.sourceCode { white-space: pre; position: relative; }
 pre > code.sourceCode > span { display: inline-block; line-height: 1.25; }
@@ -325,17 +332,18 @@ code > span.er { color: #a61717; background-color: #e3d2d2; }
 
 <h1 class="title toc-ignore">Package {tod} - Introduction</h1>
 <h4 class="author">Pascal Irz</h4>
-<h4 class="date">2021-02-12</h4>
+<h4 class="date">2021-04-21</h4>
 
 
 
 <div id="présentation-du-package" class="section level1">
 <h1>Présentation du package</h1>
 <p>Un <em>package</em> R regroupe un ensemble de fonctions. Celui-ci est nommé <code>{tod}</code> pour les initiales de “télécharger open data”. A terme, il fournira un jeu assez fourni de fonctionalités pour importer des jeux de données ouvertes et leur appliquer des mises en formes minimales.</p>
-<p>Dans un premier temps, il permet que de manipuler les données :</p>
+<p>Pour le moment il permet de :</p>
 <ul>
-<li>du <a href="https://rpubs.com/kamoke/723482">Géoportail de l’Urbanisme</a>.</li>
-<li>de la <a href="https://rpubs.com/kamoke/723965">banque HYDRO</a>.</li>
+<li>manipuler les données du <a href="https://rpubs.com/kamoke/723482">Géoportail de l’Urbanisme</a></li>
+<li>télécharger, agréger et simplifier le découpage administratif de la France</li>
+<li>télécharger, agréger et simplifier le découpage hydrographique de la France, par exemple pour <a href="https://rpubs.com/kamoke/753331">calculer la richesse en espèces de poissons par bassin versant</a>.</li>
 </ul>
 <p>Les fonctions sont nommées de manière relativement explicite. Par exemple toutes celles préfixées par <code>ign_urba</code>, comme <code>ign_urba_lire_shapes()</code> concernent la chaîne de traitements dédiée au portail de l’urbanisme. La première partie du préfixe indique l’organisme fournisseur de la donnée, la seconde le nom de la base.</p>
 </div>
